nullaway_error_E1282E36-EEC6-4AB7-82B7-7A4C5F67138E.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-core/src/main/java/org/springframework/util/concurrent/ListenableFutureTask.java:75: error: [NullAway] parameter value of referenced method is @NonNull, but parameter in functional interface method org.springframework.util.concurrent.SuccessCallback.onSuccess(T) is @Nullable
		this.callbacks.addSuccessCallback(completable::complete);
		                                  ^
    (see http://t.uber.com/nullaway )
